--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "jest": "jest --ci --reporters=default --reporters=jest-junit",
     "mvnbuild": "",
-    "mvntest": "npm run lint",
+    "mvntest": "npm run lint && npm run jest",
     "test": "npm run mvntest",
     "lint": "eslint --color eslint.config.js src/main/resources -f eslint-formatter-multiple",
     "lint:fix": "npm run lint -- --fix"
@@ -14,7 +15,10 @@
     "eslint": "^9.13.0",
     "eslint-formatter-checkstyle": "^8.40.0",
     "eslint-formatter-multiple": "^2.0.0",
-    "globals": "^15.11.0"
+    "globals": "^15.11.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0"
   },
   "eslint-formatter-multiple": {
     "formatters": [
@@ -28,5 +32,9 @@
         "path": "target/eslint-warnings.xml"
       }
     ]
+  },
+  "jest-junit": {
+    "outputDirectory": "target/surefire-reports",
+    "outputName": "jest-junit.xml"
   }
 }
